# pydupfinder

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: python-app.yml
pydupfinder/: pydupfinder.py
pydupfinder/pentode_fi/: body.py  cache.py  filesystem.py  interface.py  memory.py  number.py  size.py
tests/: test_memory.py  test_number.py  test_size.py
tests/pentode_fi/: test_cache.py  test_number.py
