[tool.poetry]
name = "pydupfinder"
version = "0.1.0"
description = ""
authors = ["Alexey Vyskubov <alexey@ocaml.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
click-option-group = "^0.5.5"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
black = "^22.12.0"
ruff = "^0.0.231"
pytest = "^7.2.1"

[tool.poetry.scripts]
pydupfinder = "pydupfinder.pydupfinder:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
